--- a/estilo10.css
+++ b/estilo10.css
@@ -161,7 +161,7 @@ ul {
 
 @media screen and (min-width: 16em) {
     .trailer {          
-        background-image: url(../Desafio10/imagens10/fundo.jpg);
+        background-image: url(./imagens10/fundo.jpg);
         background-size: cover;
         background-position: center top;
         background-repeat: no-repeat;
